<resources>
    <string name="app_name">BurnOutApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="placeHolder">Place Holder</string>
    <string name="affirmationsTitle">Полезное напоминание:</string>
    <string name="saveBtn">Сохранить</string>
    <string name="deleteBtn">Удалить</string>
    <string name="backBtn">Назад</string>
    <string name="nextBtn">Далее</string>
    <string name="skipBtn">Пропустить обучение</string>
    <string name="copyBtn">Скопировать на</string>
    <string name="hint">Название</string>
    <string name="menuAbout">Подробнее о выгорании</string>
    <string name="menuTest">Пройти тест</string>
    <string name="menuTutorial">Показать обучение</string>
    <string name="menuReport">Сообщить об ошибке</string>
    <string name="time">12:00 – 13:00</string>
    <string name="tvStart">Начало</string>
    <string name="tvEnd">Конец</string>
    <string name="timeStart">12:00</string>
    <string name="timeEnd">13:00</string>
    <string name="addTaskButton">Добавить выполненное дело в список</string>
    <string name="addTimetableButton">Добавить пункт расписания</string>
    <string name="addMoodButton">Отметить текущее настроение</string>
    <string name="moreButton">Ещё</string>
    <string name="main_text">При выгорании любое, даже самое незначительное действие, забирает больше энергии, чем обычно.\nЗафиксируйте всё, на что тратятся силы, чтобы не забыть, куда ушла энергия.\nИ помните: самое главное - не винить себя, даже если сделали мало.</string>
    <string name="empty_list_message">При эмоциональном выгорании любое, даже самое незначительное действие, забирает куда больше энергии, чем обычно. Фиксируйте все дела, которые дались вам не легко. Это позволит осознать, куда ушла энергия. Не стесняйтесь хвалить себя за каждое выполненное дело в этом списке. По мере выхода из эмоционального выгорания Вам станет легче делать что-либо, поэтому количество выполненных дел в месяц будет увеличиваться само собой, не гонитесь за количеством прямо сейчас.</string>
    <string name="empty_timetable_message">Настройте расписание дня под себя. Не вдавайтесь в подробности - достаточно примерно определить временные рамки работы и отдыха. Главная цель - наладить режим, чтобы легко просыпаться по утрам, и как можно больше отдыхать.\nПомните: для преодоления синдрома эмоционального выгорания человеку необходимо позволить себе начать отдыхать без угрызений совести. Вы не обязаны быть продуктивными, если нет на это сил и прямого желания.\nЛучше всего узаконить для себя отдых: выделить в расписании время, когда можно делать только то, что на самом деле хочется (даже если это подразумевает дополнительный сон, игры, просмотр видео или скроллинг ленты, в этом нет ничего страшного, так надо).</string>
    <string name="empty_mood_list_message">Отмечайте своё состояние хотя бы раз в день, чтобы следить за прогрессом. По ходу избавления от эмоционального выгорания количество апатии, вины и тревоги должно сокращаться.</string>
    <string name="about_burnout">Эмоциональное выгорание — это состояние эмоционального, физического и психического истощения из-за чрезмерного и длительного стресса.\nОно происходит, если человек долго чувствует себя перегруженным, лишённым сил и неспособным справляться с внешними условиями. Таким образом, выгорание отличается от переутомления тем, что простого отдыха недостаточно для избавления от этого синдрома.\nОсновные симптомы выгорания:\n — Ощущение мотивационного или физического истощения.\n — Прокрастинация и чувство вины из-за этого.\n — Проблемы со сном: от нарушения засыпания до постоянной сонливости.\n — Раздражительность, появление сложностей в общении.\n — Нарушение пищевого поведения.\n — Снижение продуктивности и концентрации.\n — Деперсонализация, отстранение от происходящего.\nСимптомы эмоционального выгорания могут быть почти незаметными поначалу и усиливаться со временем. Некоторые из них человек может испытывать периодически, но считать состояние выгоранием можно, когда его признаки возникают каждый день в течение длительного периода времени. Симптовмов эмоционального выгорания достаточно много и далеко не все проявляются у каждого человека.</string>
    <string name="menu_message">Никто не может исцелить Вас за Вас. Никто не может сделать работу за Вас. Но это не значит, что Вы должны делать это в одиночку. Вы заслуживаете поддержки и помощи. Это нормально не быть продуктивными каждый день.</string>
    <string name="answer1">Никогда</string>
    <string name="answer2">Очень редко</string>
    <string name="answer3">Редко</string>
    <string name="answer4">Иногда</string>
    <string name="answer5">Часто</string>
    <string name="answer6">Очень часто</string>
    <string name="answer7">Каждый день</string>
    <string name="Mon">Понедельник</string>
    <string name="Tue">Вторник</string>
    <string name="Wen">Среда</string>
    <string name="Thu">Четверг</string>
    <string name="Fri">Пятница</string>
    <string name="Sat">Суббота</string>
    <string name="Sun">Воскресенье</string>
    <string-array name="days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>