<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="timetable.NewTimetableCardFragment">

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeHolder"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        style="@style/TextAppearance.AppCompat.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/name"
            android:hint="@string/hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/tvStart"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timeStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvStart"
                android:backgroundTint="@color/white"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/timeStart"
                android:textColor="#454040"
                android:textSize="18sp"
                android:textStyle="normal"
                app:cornerRadius="5dp"
                app:strokeColor="#AEABAB"
                app:strokeWidth="1dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/tvEnd"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timeEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:backgroundTint="@color/white"
                android:layout_below="@+id/tvEnd"
                android:text="@string/timeEnd"
                android:textStyle="normal"
                android:textColor="#454040"
                android:textSize="18sp"
                app:cornerRadius="5dp"
                app:strokeColor="#AEABAB"
                app:strokeWidth="1dp"/>

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/purple_200"
        android:textColor="?colorOnPrimary"
        android:padding="10dp"
        android:text="@string/saveBtn" />

</LinearLayout>